# shindan-maker

./: .gitignore  Cargo.toml  README.md  shindan.html
examples/: get_html_str.rs  get_segments.rs  get_title.rs  html_to_img.rs  html_to_png.rs
src/: client.rs  domain.rs  error.rs  html_template.rs  html_utils.rs  http_utils.rs  internal.rs  lib.rs  main.rs  models.rs  segment.rs  selectors.rs  shindan_domain.rs
tests/: integration_test.rs
