[package]
name = "shindan-maker"
version = "0.1.10"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Nawyjx <3373167460@qq.com>"]
categories = ["web-programming::http-client"]
documentation = "https://docs.rs/shindan-maker"
repository = "https://github.com/araea/shindan-maker"
keywords = ["shindan", "shindanmaker", "shindan-maker", "fortune-tellings", "diagnosis"]
description = "A Rust library for interacting with Shindan Maker, the popular personality quiz service."

[dependencies]
anyhow = "1.0"
scraper = "0.20"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["cookies"] }
headless_chrome = { version = "1.0", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
base64 = "0.22.1"

[features]
default = ["text"]
full = ["text", "image"]
text = []
image = ["dep:headless_chrome"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
