[package]
name = "shindan-maker"
version = "0.1.24"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Nawyjx <3373167460@qq.com>"]
categories = ["web-programming::http-client"]
documentation = "https://docs.rs/shindan-maker"
repository = "https://github.com/araea/shindan-maker"
keywords = [
    "shindan",
    "shindanmaker",
    "shindan-maker",
    "fortune-tellings",
    "diagnosis",
]
description = "A Rust library for interacting with ShindanMaker, the popular personality quiz service."

[[example]]
name = "get_title"
path = "examples/get_title.rs"

[[example]]
name = "get_segments"
path = "examples/get_segments.rs"
required-features = ["segments"]

[[example]]
name = "get_html_str"
path = "examples/get_html_str.rs"
required-features = ["html"]

[[example]]
name = "html_to_img"
path = "examples/html_to_img.rs"
required-features = ["html"]

[dependencies]
anyhow = "1.0"
scraper = "0.21"
serde_json = "1.0"
once_cell = "1.20.2"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["cookies", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
base64 = "0.22"
cdp-html-shot = "0.1"

[features]
default = ["segments"]
full = ["segments", "html"]
segments = []
html = []

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
